force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system administrator populates this checkbox field to indicate that the data service must provide the defined field from the source object when mapping. By default, this field is deselected.</description>
    <inlineHelpText>Select this option to ensure the given field is provided from the source object.</inlineHelpText>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>