force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Order__c</fullName>
    <description>The administrator manually populates this optional number field to define the sequence of mappings. By default, it is blank.</description>
    <inlineHelpText>Enter the desired value(s) to define the sequence of mappings.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>