force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Orig_Obj_Field__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Orig_Obj_Field__c</fullName>
    <description>This field is required and is manually populated. This text field is used to specify the field on the originating object in which the data will be mapped from during the conversion process.</description>
    <label>Originating Obj Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>