force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Source_Feature__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Feature__c</fullName>
    <description>Administrators manually populate this optional field to indicate the feature associated with the data mapping (for example, HMDA2018). The key must match the documented key for the feature. By default, this field is blank.</description>
    <label>Source Feature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>