force-app/main/default/objects/LLC_BI__Field_Map__c/fields/LLC_BI__Target_Obj__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Target_Obj__c</fullName>
    <description>This field is required and is manually populated. This text field is used to specify the object in which the data from the originating object/field will be mapped to during the conversion process.</description>
    <label>Target Obj</label>
    <length>100</length>
    <type>Text</type>
</CustomField>