force-app/main/default/objects/LLC_BI__Field_Map__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>LLC_BI__Orig_Obj__c</columns>
    <columns>LLC_BI__Orig_Obj_Field__c</columns>
    <columns>LLC_BI__Target_Obj__c</columns>
    <columns>LLC_BI__Target_Obj_Field__c</columns>
    <columns>LLC_BI__Relationship_Type__c</columns>
    <columns>LLC_BI__lookupKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>